kubernetes/applications/stirling-pdf/manifests/stirling-pdf-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stirling-pdf-deployment
  namespace: stirling-pdf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stirling-pdf
  template:
    metadata:
      labels:
        app: stirling-pdf
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: files
          image: stirlingtools/stirling-pdf:2.14.3-fat
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /usr/local/bin
              name: bin
            - mountPath: /configs
              name: configs
            - mountPath: /tmp
              name: tmp
            - mountPath: /home/stirlingpdfuser
              name: home
            - mountPath: /logs
              name: logs
            - mountPath: /pipeline
              name: pipeline
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1536Mi
      volumes:
        - name: bin
          emptyDir: {}
        - name: configs
          persistentVolumeClaim:
            claimName: stirling-pdf-config-pvc
        - name: tmp
          emptyDir: {}
        - name: home
          emptyDir: {}
        - name: logs
          emptyDir: {}
        - name: pipeline
          emptyDir: {}
