kubernetes/applications/stirling-pdf/manifests/stirling-pdf-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stirling-pdf-httproute
  namespace: stirling-pdf
spec:
  parentRefs:
    - name: default-gateway
      namespace: kube-system
  hostnames:
    - pdf.nieradko.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: stirling-pdf-service
          port: 8080
